# Predictions-and-Alerts

./: .gitattributes  .gitignore  config.json  pyproject.toml
CAD/: __init__.py  config.py  utils.py
CAD/modeling/: feature_engineering.py  model_training.py  parameter_tuning.py  predict.py  train.py
Model Training/: __init__.py  config.py  dataset.py  features.py  plots.py
Model Training/modeling/: predict.py  train.py
data/interim/: Merged_Data.csv  RollingAvgStudents.csv  TrainLong.csv  TrainWide.csv
data/processed/: Alerts.parquet  FinalTrainingData.parquet  Predictions.csv  Predictions.parquet
models/: lgbm_regressor.pkl
notebooks/: 01-mn-data_cleaning_2024_and_merging.ipynb  01-mn-data_cleaning_and_merging.ipynb  02-mn-merged_data_cleaning.ipynb  03-mn-model_training.ipynb  test.ipynb
